--- a/InfluxDB.Net.Tests/packages.config
+++ b/InfluxDB.Net.Tests/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
-  <package id="AutoFixture" version="3.20.2" targetFramework="net45" />
-  <package id="FluentAssertions" version="3.2.1" targetFramework="net45" />
-  <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
+  <package id="AutoFixture" version="3.24.3" targetFramework="net45" />
+  <package id="Common.Testing.NUnit" version="1.0.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="3.3.0" targetFramework="net45" />
+  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
 </packages>
