--- a/InfluxDB.Net/packages.config
+++ b/InfluxDB.Net/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable4-net45+sl5+win8+wp8+wpa81" userInstalled="true" />
-  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="portable-monoandroid1+monotouch1+net45+sl5+win+wp8+wpa81+xamarinios1" userInstalled="true" />
-  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable4-net45+sl5+win8+wp8+wpa81" userInstalled="true" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable4-net45+sl5+win8+wp8+wpa81" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="portable4-net45+sl5+win8+wp8+wpa81" userInstalled="true" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable4-net45+sl5+win8+wp8+wpa81" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="portable4-net45+sl5+win8+wp8+wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable4-net45+sl5+win8+wp8+wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable4-net45+sl5+win8+wp8+wpa81" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable4-net45+sl5+win8+wp8+wpa81" />
 </packages>
