--- a/InfluxDB.Net.Tests/packages.config
+++ b/InfluxDB.Net.Tests/packages.config
@@ -5,7 +5,7 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.911" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
-  <package id="System.Threading.Tasks" version="4.0.10" targetFramework="net46" />
 </packages>
