--- a/InfluxDB.Net.Tests/app.config
+++ b/InfluxDB.Net.Tests/app.config
@@ -1,19 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<add key="url" value="http://localhost:8086"/>
-		<add key="username" value="root"/>
-		<add key="password" value="root"/>
+		<add key="url" value="http://localhost:8086" />
+		<add key="username" value="root" />
+		<add key="password" value="root" />
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
-				<assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-4.2.28.0" newVersion="4.2.28.0"/>
-			</dependentAssembly>
+				<assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+			</dependentAssembly>			
 		</assemblyBinding>
 	</runtime>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
 	</startup>
 </configuration>
