--- a/InfluxDB.Net.Tests/packages.config
+++ b/InfluxDB.Net.Tests/packages.config
@@ -3,5 +3,5 @@
   <package id="AutoFixture" version="3.31.3" targetFramework="net45" />
   <package id="FluentAssertions" version="4.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1507.0118" targetFramework="net45" />
-  <package id="NUnit" version="3.0.0-beta-4" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
 </packages>
