--- a/InfluxDB.Net/InfluxDB.Net.csproj
+++ b/InfluxDB.Net/InfluxDB.Net.csproj
@@ -44,8 +44,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Client\InfluxDbClientV096.cs" />
+    <Compile Include="Client\InfluxDbClientV095.cs" />
     <Compile Include="Constants\QueryStatements.cs" />
     <Compile Include="Constants\QueryParams.cs" />
+    <Compile Include="Infrastructure\Formatters\FormatterV096.cs" />
+    <Compile Include="Infrastructure\Formatters\FormatterV095.cs" />
     <Compile Include="Infrastructure\Validation\Validate.cs" />
     <Compile Include="Infrastructure\Configuration\DatabaseConfiguration.cs" />
     <Compile Include="Contracts\IInfluxDb.cs" />
@@ -56,9 +60,9 @@
     <Compile Include="Contracts\IRequestContent.cs" />
     <Compile Include="Enums\LogLevel.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV092.cs" />
-    <Compile Include="Infrastructure\Formatters\FormatterV09x.cs" />
+    <Compile Include="Infrastructure\Formatters\FormatterBase.cs" />
     <Compile Include="Contracts\IFormatter.cs" />
-    <Compile Include="Client\InfluxDbClient.cs" />
+    <Compile Include="Client\InfluxDbClientBase.cs" />
     <Compile Include="Client\InfluxDbClientAutoVersion.cs" />
     <Compile Include="Client\InfluxDbClientV092.cs" />
     <Compile Include="Enums\InfluxVersion.cs" />
