--- a/InfluxDB.Net.Tests/InfluxDB.Net.Tests.csproj
+++ b/InfluxDB.Net.Tests/InfluxDB.Net.Tests.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
