--- a/InfluxDB.Net/InfluxDB.Net.csproj
+++ b/InfluxDB.Net/InfluxDB.Net.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Client\InfluxDbClientV010x.cs" />
     <Compile Include="Client\InfluxDbClientV011x.cs" />
     <Compile Include="Client\InfluxDbClientV012x.cs" />
+    <Compile Include="Client\InfluxDbClientV0x.cs" />
     <Compile Include="Client\InfluxDbClientV092.cs" />
     <Compile Include="Client\InfluxDbClientV095.cs" />
     <Compile Include="Client\InfluxDbClientV096.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Infrastructure\Formatters\FormatterV010x.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV011x.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV012x.cs" />
+    <Compile Include="Infrastructure\Formatters\FormatterV0x.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV092.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV095.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV096.cs" />
