--- a/InfluxDB.Net/InfluxDB.Net.csproj
+++ b/InfluxDB.Net/InfluxDB.Net.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Client\InfluxDbClientV010x.cs" />
     <Compile Include="Client\InfluxDbClientV011x.cs" />
     <Compile Include="Client\InfluxDbClientV012x.cs" />
+    <Compile Include="Client\InfluxDbClientV013x.cs" />
     <Compile Include="Client\InfluxDbClientV0x.cs" />
     <Compile Include="Client\InfluxDbClientV092.cs" />
     <Compile Include="Client\InfluxDbClientV095.cs" />
